[gd_scene load_steps=15 format=3 uid="uid://dt758a3e6unjo"]

[ext_resource type="Texture2D" uid="uid://hqkduoyy3y6l" path="res://Imports/WorldMap/map.png" id="1_nbylh"]
[ext_resource type="Script" path="res://Scripts/UI/login_screen.gd" id="1_x0enj"]

[sub_resource type="Theme" id="Theme_8h6bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2i31a"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rms1u"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3c7fn"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_caf6l"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcibv"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywtcb"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0lfg6"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_57xeq"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trslw"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50hn2"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rrhtx"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x0enj")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 958.0
offset_bottom = 540.0
texture = ExtResource("1_nbylh")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 288.0
offset_top = 73.0
offset_right = 666.0
offset_bottom = 538.0

[node name="playerID" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Player ID
"

[node name="PlayerID_Field" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="password" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="PasswordField" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
secret = true

[node name="Login" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_8h6bg")
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_2i31a")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_rms1u")
theme_override_styles/disabled = SubResource("StyleBoxFlat_3c7fn")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_caf6l")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_dcibv")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_ywtcb")
theme_override_styles/hover = SubResource("StyleBoxFlat_0lfg6")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_57xeq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_trslw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_50hn2")
theme_override_styles/normal = SubResource("StyleBoxFlat_rrhtx")
text = "Login
"

[node name="HTTPRequest" type="HTTPRequest" parent="NinePatchRect/VBoxContainer/Login"]

[node name="Register" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 284.0
offset_top = 338.0
offset_right = 356.0
offset_bottom = 369.0
text = "Register
"

[node name="WorldMap" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 573.0
offset_top = 338.0
offset_right = 666.0
offset_bottom = 369.0
text = "World Map
"

[connection signal="button_down" from="NinePatchRect/VBoxContainer/Login" to="." method="_on_login_button_down"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="request_completed" from="NinePatchRect/VBoxContainer/Login/HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="NinePatchRect/Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="NinePatchRect/WorldMap" to="." method="_on_world_map_pressed"]
